# zerokernel

./: .gitignore  CMakeLists.txt  README.md
apps/root_task/: CMakeLists.txt  draw.hpp  font.hpp  main.cpp
common/: BootInfo.hpp  DisplayRegs.hpp  IUserRuntime.hpp  Message.hpp  PlacementNew.hpp  Resource.hpp  RootTaskDef.hpp  TaskTypes.hpp  ZImg.hpp  diagnostics.hpp
documents/: 从零实现OS内核，我与AI的对话（一）.md  从零实现OS内核，我与AI的对话（三）.md  从零实现OS内核，我与AI的对话（二）.md  从零实现OS内核，我与AI的对话（四）.md
inspect/: HeapInspector.hpp  KernelInspector.hpp
kernel/: AsyncSchedulingEngine.cpp  AsyncSchedulingEngine.hpp  BitmapIdGenerator.hpp  CMakeLists.txt  Defs.hpp  GenericObjectBuilder.hpp  IAllocator.hpp  ICPUEngine.hpp  IEventSource.hpp  IExecutionEngine.hpp  IIdGenerator.hpp  IMessageBus.hpp  IObjectBuilder.hpp  IObjectFactory.hpp  ISchedulingControl.hpp  ISchedulingPolicy.hpp  ISchedulingStrategy.hpp  ISignal.hpp  ITask.hpp  ITaskContext.hpp  ITaskContextFactory.hpp  ITaskControlBlock.hpp  ITaskControlBlockFactory.hpp  ITaskLifecycle.hpp  ITaskManager.hpp  KList.hpp  KMap.hpp  KObjectPool.hpp  KPoolList.hpp  KResource.hpp  KStackBuffer.hpp  Kernel.cpp  Kernel.hpp  KernelCallback.hpp  KernelHeapAllocator.hpp  KernelInspector.hpp  KernelObjectBuilder.hpp  KernelProxy.hpp  KernelUtils.hpp  Mailbox.hpp  (+28 more)
scripts/: pack_image.py
simulator/: CMakeLists.txt  IdleTask.hpp  LoggerWin.hpp  PlatformGlobals.cpp  Simulator.hpp  Win32SchedulingControl.hpp  Win32SignalContext.hpp  Win32SignalDispatcher.hpp  Win32SignalGate.hpp  WinCPUEngine.cpp  WinCPUEngine.hpp  WinSimulatorDisplay.hpp  WinTaskContext.cpp  WinTaskContext.hpp  WinTaskContextFactory.hpp  WinX64Regs.hpp  asmdefs.hpp  context_switch.asm  cpu_halt.asm  loader.cpp  main.cpp  task_exit.asm
src/arch/win/: WinCPUEngine.cpp  WinCPUEngine.hpp
src/boot/: context_switch.asm  main.cpp  main_sim.cpp
src/kernel/: ICPUEngine.hpp  ITaskContext.hpp  ITaskManager.hpp  ObjectFactory.hpp  kernel.cpp  kernel.hpp  memory.hpp  task.hpp  types.hpp
tests/: CMakeLists.txt  test_framework.hpp  test_main.cpp
tests/inspect/: KernelInspector.hpp
tests/integration/: kernel_bootstrap_test.cpp  test_full_system_bootstrap.cpp  test_runtime.cpp  test_task_bridge.cpp  test_task_launch.cpp  test_z_root_task.cpp
tests/mock/: ContextInspector.hpp  MockCPU.hpp  MockKernel.hpp  MockMessageBus.hpp  MockSchedulingControl.hpp  MockSignalDispatcher.hpp  MockTaskContext.hpp  MockTaskContextFactory.hpp  MockTaskManager.hpp  SimulatorMock.hpp  SyncTestEngine.hpp  hooks.hpp  mock.hpp
tests/unit/: test_abi_frames.cpp  test_abi_frames.hpp  test_bootstrap.hpp  test_containers.cpp  test_context.cpp  test_context.hpp  test_context_jump_and_abi_integrity.hpp  test_factory.cpp  test_kernel_integration_logic.hpp  test_kernel_obj_access.cpp  test_kernel_proxy.hpp  test_klist.hpp  test_message_bus.hpp  test_message_callback.hpp  test_message_system.hpp  test_root_task.cpp  test_runtime.hpp  test_simulator_core.cpp  test_simulator_core.hpp  test_task_creation_integrity.hpp  test_task_factory.hpp  test_zig.cpp  test_zimg.hpp
tools/: build_zimg.py
